@@ -1,3 +1,5 @@
+* Agents: remove obsolete parameter from method call that references an 
+  undefined variable.
 * Merge improvements to templates for Campaign Out by Franck Danard
 * Display callerid as incoming number for incoming calls
 * Add more missing strings and synchronize French translations
